--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "author": "Adrian Adewunmi",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.10.2",
+    "@babel/core": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "html-webpack-plugin": "^4.3.0",
     "webpack": "^4.43.0",
@@ -21,6 +22,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0"
   }
 }
